# halia

./: .gitignore  Cargo.toml  Dockerfile  config.toml
src/api/: Cargo.toml
src/api/src/: app.rs  app_api.rs  apps.rs  connector.rs  databoard.rs  databoard_api.rs  device.rs  device_api.rs  event_api.rs  lib.rs  modbus.rs  mqtt.rs  rule.rs  rule_api.rs  schema_api.rs  sink.rs  source.rs  user.rs  user_api.rs
src/api/src/apps/: http_client.rs  mod.rs  mqtt_client.rs  mqtt_client_v311.rs  mqtt_client_v50.rs
src/api/src/devices/: coap.rs  mod.rs  modbus.rs  opcua.rs
src/apps/: Cargo.toml
src/apps/src/: lib.rs  mqtt_client_ssl.rs  mqtt_v311_client.rs
src/apps/src/http/: mod.rs  sink.rs  source.rs
src/apps/src/http_client/: manager.rs  mod.rs  sink.rs  source.rs
src/apps/src/influxdb/: mod.rs  sink.rs
src/apps/src/influxdb_v1/: mod.rs  sink.rs
src/apps/src/influxdb_v2/: mod.rs  sink.rs
src/apps/src/kafka/: mod.rs  sink.rs  source.rs
src/apps/src/log/: mod.rs  sink.rs
src/apps/src/mqtt/: manager.rs  mod.rs
src/apps/src/mqtt_client/: manager.rs  mod.rs  sink.rs  source.rs
src/apps/src/mqtt_client_v311/: manager.rs  mod.rs  sink.rs  source.rs
src/apps/src/mqtt_client_v50/: manager.rs  mod.rs  sink.rs  source.rs
src/apps/src/mqtt_server/: mod.rs  sink.rs  srouce.rs
src/apps/src/mqtt_v311/: mod.rs  sink.rs  source.rs
src/apps/src/mqtt_v50/: mod.rs  sink.rs  source.rs
src/apps/src/tdengine/: mod.rs  sink.rs
src/apps/src/websocket/: mod.rs  sink.rs  source.rs
src/coap/: Cargo.toml
src/coap/src/: client.rs  dtls.rs  observer.rs  server.rs
src/common/: Cargo.toml
src/common/src/: config.rs  constants.rs  error.rs  error_manager.rs  lib.rs  log.rs  macros.rs  ref_info.rs  sink_message_ratain.rs  sys.rs
src/common/src/error/: mod.rs
src/common/src/json/: mod.rs  number.rs
src/common/src/persistence/: app.rs  apps.rs  connector.rs  databoard.rs  device.rs  group.rs  local.rs  message.rs  mod.rs  modbus.rs  point.rs  rule.rs  sink.rs  source.rs  source_item.rs  user.rs
src/common/src/storage/: app.rs  databoard.rs  databoard_data.rs  device.rs  event.rs  mod.rs  rule.rs  rule_ref.rs  schema.rs  sink.rs  source.rs  source_or_sink.rs  user.rs
src/connectors/: Cargo.toml
src/connectors/src/: lib.rs  mqtt_v311_client.rs
src/connectors/src/mqtt_v311_client/: mod.rs
src/databoard/: Cargo.toml
src/databoard/src/: data.rs  databoard.rs  databoard_struct.rs  lib.rs
src/device/: Cargo.toml
src/device/src/: connection.rs  err_code.rs  lib.rs  storage.rs
src/device/src/coap/: mod.rs  path.rs  sink.rs
src/device/src/modbus/: device.rs  group.rs  group_point.rs  manager.rs  mod.rs  point.rs  protocol.rs  rtu_encoder.rs  sink.rs  sink_point.rs
src/device/src/opcua/: group.rs  mod.rs  point.rs
src/devices/: Cargo.toml
src/devices/src/: device_template.rs  lib.rs  sink_template.rs  source_group.rs  source_sink_template.rs  source_template.rs
src/devices/src/coap/: api.rs  get_source.rs  group.rs  group_api.rs  manager.rs  mod.rs  observe.rs  observe_source.rs  resource.rs  sink.rs  source.rs
src/devices/src/modbus/: group.rs  group_point.rs  manager.rs  mod.rs  point.rs  sink.rs  sink_template.rs  source.rs  source_template.rs  template.rs
src/devices/src/opcua/: event.rs  group.rs  group_variable.rs  manager.rs  mod.rs  monitored_item.rs  sink.rs  source.rs  subscription.rs  subscription_item.rs  template.rs  variable.rs
src/functions/: Cargo.toml
src/functions/aggregate/: avg.rs  collect.rs  max.rs
src/functions/src/: args.rs  lib.rs
src/functions/src/aggregate/: avg.rs  collect.rs  count.rs  deduplicate.rs  max.rs  merge.rs  min.rs  mod.rs  sum.rs
src/functions/src/aggregation/: avg.rs  collect.rs  count.rs  deduplicate.rs  max.rs  merge.rs  min.rs  mod.rs  sum.rs
src/functions/src/compress/: deflate.rs  gzip.rs  mod.rs  snappy.rs  zlib.rs
src/functions/src/compute/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atan2.rs  atanh.rs  cbrt.rs  ceil.rs  cos.rs  cosh.rs  degrees.rs  exp.rs  exp2.rs  floor.rs  ln.rs  log.rs  mod.rs  sin.rs
src/functions/src/computes/: mod.rs
src/functions/src/encode/: json.rs
src/functions/src/field/: except.rs  mod.rs  move.rs  name.rs
src/functions/src/filter/: array.rs  ct.rs  eq.rs  gt.rs  gte.rs  is_array.rs  is_not_array.rs  lt.rs  lte.rs  mod.rs  neq.rs  reg.rs
src/functions/src/join/: mod.rs
src/functions/src/log/: mod.rs
src/functions/src/merge/: merge.rs
src/functions/src/metadata/: mod.rs
src/functions/src/src/: lib.rs
src/functions/src/template/: mod.rs
src/functions/src/type_conversion/: float_to_int.rs  float_to_str.rs  int_to_str.rs  mod.rs  to_float.rs  to_int.rs  to_str.rs
src/functions/src/type_judgment/: array.rs  float.rs  int.rs  mod.rs  null.rs  string.rs  struct.rs
src/functions/src/types/: mod.rs
src/functions/src/window/: count.rs  mod.rs  time.rs  time_hopping.rs  time_session.rs  time_thmbling.rs
src/managers/: Cargo.toml
src/managers/src/: lib.rs
src/message/: Cargo.toml
src/message/src/: avro.rs  csv.rs  datatype.rs  de.rs  error.rs  json.rs  lib.rs  message.rs  message_value.rs  ptorobuf.rs  toml.rs  value.rs  yaml.rs
src/opcua/: Cargo.toml
src/opcua/src/: lib.rs
src/operators/: Cargo.toml
src/operators/src/: lib.rs
src/protocol/: Cargo.toml
src/protocol/src/: lib.rs
src/rule/: Cargo.toml
src/rule/src/: graph.rs  lib.rs  log.rs  manager.rs  rule.rs  segment.rs  stream.rs
src/schema/: Cargo.toml
src/schema/src/: avro.rs  avro_no_schema.rs  csv.rs  json.rs  lib.rs  yaml.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/sink/: Cargo.toml
src/sink/src/: lib.rs  log.rs
src/sinks/: Cargo.toml
src/sinks/src/: lib.rs  log.rs
src/source/: Cargo.toml
src/source/src/: device.rs  http_pull.rs  lib.rs  mqtt.rs  mqtt_topic.rs  mqttv31.rs
src/sources/: Cargo.toml
src/sources/src/: device.rs  lib.rs  mqtt.rs
src/types/: Cargo.toml
src/types/src/: apps.rs  connector.rs  databoard.rs  device.rs  events.rs  lib.rs  mqtt_server.rs  rule.rs  schema.rs  sink.rs  source.rs  user.rs
(+476 files in other folders)
