[workspace]
members = [
    "src/api",
    "src/message",
    "src/server",
    "src/types",
    "src/devices",
    "src/common",
    "src/functions",
    "src/protocol",
    "src/rule",
    "src/apps",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
api = { path = "src/api" }
types = { path = "src/types" }
message = { path = "src/message" }
devices = { path = "src/devices" }
common = { path = "src/common" }
protocol = { path = "src/protocol" }
functions = { path = "src/functions" }
rule = { path = "src/rule" }
apps = { path = "src/apps" }

serde_json = { version = "1.0.120", features = [
    "float_roundtrip",
    "arbitrary_precision",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
bytes = "1.6.0"
indexmap = "2.2.6"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
futures = "0.3.30"
dashmap = "6.0.0"
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
ryu = "1.0.18"
itoa = "1.0.11"
regex = "1.10.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
