[workspace]
members = [
    "src/api",
    "src/message",
    "src/server",
    "src/types",
    "src/devices",
    "src/common",
    "src/functions",
    "src/protocol",
    "src/rule",
    "src/apps",
    "src/databoard",
    "src/mqtt-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
api = { path = "src/api" }
types = { path = "src/types" }
message = { path = "src/message" }
devices = { path = "src/devices" }
common = { path = "src/common" }
protocol = { path = "src/protocol" }
functions = { path = "src/functions" }
rule = { path = "src/rule" }
apps = { path = "src/apps" }

serde_json = { version = "1.0.120" }
serde_repr = "0.1.19"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
bytes = "1.6.0"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
futures = "0.3.30"
dashmap = "6.0.0"
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
itoa = "1.0.11"
regex = "1.10.5"
thiserror = "1.0.63"
base64 = "0.22.1"
rustls = "0.23.12"
md5 = "0.7.0"
sha1 = "0.10.6"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "native-tls-vendored",
] }
sqlx = { version = "0.8.1", features = [
    "any",
    "sqlite",
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
