[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
devices = { workspace = true }
common = { workspace = true }
rule = { workspace = true }
apps = { workspace = true }
databoard = { workspace = true }
events = { workspace = true }
schema = { workspace = true }
storage = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
bytes = { workspace = true }
tower = { version = "0.5.0", features = ["full"] }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
time = "0.3.36"
tokio-util = "0.7.12"
dashmap = { workspace = true }
async-stream = "0.3.6"
tracing = { workspace = true }