[package]
name = "apps"
version.workspace = true
edition.workspace = true

[dependencies]
rumqttd = "0.19.0"
rumqttc = "0.24.0"

tokio = { workspace = true }
types = { workspace = true }
common = { workspace = true }
message = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }