[package]
name = "apps"
version.workspace = true
edition.workspace = true

[dependencies]
rumqttd = "0.19.0"
rumqttc = "0.24.0"
rskafka = "0.5.0"
influxdb = "0.7.2"

tokio = { workspace = true }
types = { workspace = true }
common = { workspace = true }
message = { workspace = true }
events = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.2.0"