[package]
name = "coap"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.83"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio = { version = "1.41.0", features = ["full"] }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tracing = "0.1.40"
futures-util = "0.3.30"
coap-lite = "0.12.0"
regex = "1.11.1"
futures = "0.3.31"
url = "2.5.2"
rand = "0.8.5"
webrtc-dtls = "0.10.0"
webrtc-util = "0.9.0"
tokio-stream = "0.1.15"
tokio-serial = "5.4.4"