[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
message = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
