[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
message = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
paste = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
