[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
message = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
async-stream = "0.3.6"
futures-util = { workspace = true }
tokio-util = { version = "0.7.12", features = ["full"] }
