[package]
name = "databoard"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
types = { workspace = true }
message = { workspace = true }

tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
paste = { workspace = true }
