[package]
name = "databoard"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
types = { workspace = true }
message = { workspace = true }
storage = { workspace = true }

tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
