[package]
name = "device"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
common = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tokio-util = { version = "0.7.11", features = ["codec"] }
futures-util = "0.3.30"
thiserror = "1.0.61"
tokio-serial = { version = "5.4.4" }
uuid = { workspace = true }
