[package]
name = "devices"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
common = { workspace = true }
events = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
message = { workspace = true }
protocol = { workspace = true }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tokio-util = { version = "0.7.11", features = ["codec"] }
thiserror = "1.0.61"
tokio-serial = { version = "5.4.4" }
opcua = { git = "https://github.com/locka99/opcua.git", features = ["client"] }

base64 = { workspace = true }
anyhow = { workspace = true }

async-trait = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
