[package]
name = "devices"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
common = { workspace = true }
events = { workspace = true }
storage = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
message = { workspace = true }
modbus_protocol = { package = "modbus", path = "../../../protocol/modbus" }
coap_protocol = { package = "coap", path = "../../../protocol/coap" }
opcua_protocol = { package = "opcua", path = "../../../protocol/opcua" }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tokio-util = { version = "0.7.11", features = ["codec"] }
thiserror = "1.0.61"
tokio-serial = { version = "5.4.4" }

base64 = { workspace = true }
anyhow = { workspace = true }

async-trait = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
