[package]
name = "functions"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
types = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
regex = "1.10.5"
tokio = { workspace = true }
futures = { workspace = true }
pin-utils = "0.1.0"