[package]
name = "functions"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
types = { workspace = true }
common = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
regex = "1.10.5"
tokio = { workspace = true }
futures = { workspace = true }
pin-utils = "0.1.0"
base64 = { workspace = true }
md5 = { workspace = true }
sha1 = { workspace = true }
handlebars = { workspace = true }
