[package]
name = "functions"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
types = { workspace = true }
common = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
regex = "1.10.5"
tokio = { workspace = true }
futures = { workspace = true }
pin-utils = "0.1.0"
base64 = { workspace = true }
md-5 = "0.10.6"
sha1 = { workspace = true }
sha2 = "0.10.8"
flate2 = { workspace = true }
bytes = { workspace = true }
snap = { workspace = true }
brotli = { workspace = true }
lz4_flex = { workspace = true }
tokio-stream = "0.1.16"
async-stream = "0.3.6"
chrono = { workspace = true }
async-trait = { workspace = true }
hmac = "0.12.1"
rand = "0.8.5"