[package]
name = "message"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
ryu = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
csv = "1.3.0"