[package]
name = "message"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
csv = "1.3.0"
apache-avro = { workspace = true }
prost-reflect = "0.14.2"