[package]
name = "opcua"
version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# Enable deadlock_detection if there are any deadlocks in sync code
parking_lot = { version = "0.12", features = ["send_guard"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
lazy_static = "1.4.0"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bytes = "1.3"
url = "1.6"
bitflags = "2.4"
derivative = "2.2"
byteorder = "1.4"
base64 = "0.21"
uuid = { version = "1.2", features = ["v4"] }
openssl = "0.10"
openssl-sys = "0.9"
gethostname = "0.4"
libc = "0.2"
foreign-types = "0.3"
# dependencies below are only required when certain features are enabled
rumqttc = { version = "0.23", optional = true }
env_logger = { version = "0.10", optional = true }
actix-web = { version = "4.4", optional = true }
actix-files = { version = "0.6", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
arc-swap = "1.6.0"

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"
