[package]
name = "operators"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
types = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.10.4"
futures = { workspace = true }
