[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.61"
async-trait = { workspace = true }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio = { workspace = true }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tracing = { workspace = true }
futures-util = "0.3.30"