[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio = { workspace = true }
byteorder = "1.5.0"
bytes = "1.6.0"
smallvec = "1.13.2"
tracing = { workspace = true }
futures-util = "0.3.30"
coap-lite = "0.12.0"
regex = { workspace = true }
futures = { workspace = true }
url = "2.5.2"
rand = "0.8.5"
webrtc-dtls = "0.10.0"
webrtc-util = "0.9.0"
tokio-stream = "0.1.15"