[package]
name = "rule"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
common = { workspace = true }
apps = { workspace = true }
devices = { workspace = true }
databoard = { workspace = true }
storage = { workspace = true }
events = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
functions = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tokio-stream = "0.1.16"
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
