[package]
name = "rule"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
common = { workspace = true }
apps = { workspace = true }
devices = { workspace = true }
databoard = { workspace = true }
storage = { workspace = true }
events = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tokio-stream = "0.1.16"
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
tracing-subscriber = "0.3.0"
tracing-appender = "0.2.3"

brotli = { workspace = true }
flate2 = { workspace = true }
lz4_flex = { workspace = true }
snap = { workspace = true }
hmac = "0.12.1"
sha1 = { workspace = true }
sha2 = "0.10.8"
md-5 = "0.10.6"

rand = "0.8.5"

regex = "1.10.5"

async-stream = "0.3.6"