[package]
name = "schema"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
anyhow = { workspace = true }
types = { workspace = true }
common = { workspace = true }
bytes = { workspace = true }
csv = "1.3.0"
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
apache-avro = "0.17.0"
prost-reflect = "0.14.2"
