[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
api = { workspace = true }
device = { workspace = true }
json = { workspace = true }
source = { workspace = true }
sink = { workspace = true }
rule = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = "0.3.0"
tokio = { workspace = true }
anyhow = { workspace = true }
