[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
api = { workspace = true }
devices = { workspace = true }
rule = { workspace = true }
apps = { workspace = true }
protocol = { workspace = true }
common = { workspace = true }
databoard = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = "0.3.0"
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
