[package]
name = "sink"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
types = { workspace = true }
uuid = { workspace = true }
common = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
