[package]
name = "sources"
version.workspace = true
edition.workspace = true

[dependencies]
rumqttc = "0.24.0"

message = { workspace = true }
types = { workspace = true }
device = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
