[package]
name = "types"
version.workspace = true
edition.workspace = true

[dependencies]
message = { workspace = true }
json = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
